Reformatting code to meet format standard