@@ -55,12 +55,6 @@ public class ChessGame {
     private List<PieceMoves> whiteMoves = null;
     private List<PieceMoves> blackMoves = null;
 
-    public ChessGame deepCopy() {
-        return new ChessGame(board != null ? board.deepCopy() : null,
-            whiteMoves != null ? whiteMoves.stream().map(PieceMoves::deepCopy).toList() : null,
-            blackMoves != null ? blackMoves.stream().map(PieceMoves::deepCopy).toList() : null);
-    }
-
     public static ChessGame start() {
         return new ChessGame(ChessBoard.initial());
     }
@@ -95,13 +89,13 @@ public class ChessGame {
         assert whiteMoves != null;
         assert blackMoves != null;
 
-        var moves = getCurrMoves();
+        List<PieceMoves> moves = getCurrMoves();
 
         // has a match for a move from one hexagon to another hexagon
         return moves.stream()
             .anyMatch((pm) -> {
-                var isFrom = pm.getHex().equals(move.getFrom());
-                var hasTo = pm.getMoves().stream().anyMatch((m) -> m.equals(move.getTo()));
+                boolean isFrom = pm.getHex().equals(move.getFrom());
+                boolean hasTo = pm.getMoves().stream().anyMatch((m) -> m.equals(move.getTo()));
                 return isFrom && hasTo;
             });
     }
@@ -111,7 +105,7 @@ public class ChessGame {
     }
 
     public void makeMove(Hexagon from, Hexagon to) {
-        var piece = board.getPiece(from);
+        byte piece = board.getPiece(from);
         board.setPiece(from, EMPTY);
         board.setPiece(to, piece);
         board.flipTurn();
@@ -125,20 +119,20 @@ public class ChessGame {
         whiteMoves = findPieceMoves(Turn.WHITE);
         blackMoves = findPieceMoves(Turn.BLACK);
 
-        var whiteKingHex = board.findKing(Turn.WHITE);
-        var blackKingHex = board.findKing(Turn.BLACK);
+        Hexagon whiteKingHex = board.findKing(Turn.WHITE);
+        Hexagon blackKingHex = board.findKing(Turn.BLACK);
 
         // find the moves for both kings - excluding any attacking squares
-        var whiteKingMoves = new PieceMoves(whiteKingHex, findKingMoves(whiteKingHex));
-        var blackKingMoves = new PieceMoves(blackKingHex, findKingMoves(blackKingHex));
-        var kingHex = board.turn().isWhite() ? whiteKingHex : blackKingHex;
+        PieceMoves whiteKingMoves = new PieceMoves(whiteKingHex, findKingMoves(whiteKingHex));
+        PieceMoves blackKingMoves = new PieceMoves(blackKingHex, findKingMoves(blackKingHex));
+        Hexagon kingHex = board.turn().isWhite() ? whiteKingHex : blackKingHex;
 
         // decide whether we will add the piece moves... are we in check?
         // we don't need to check if the opposite move is in check... it should never be!
-        var currMoves = getCurrMoves();
-        var oppMoves = getOppositeMoves();
-        var isAttacked = findAttacking(oppMoves);
-        var isCheck = isAttacked[kingHex.getFile()][kingHex.getRank()];
+        List<PieceMoves> currMoves = getCurrMoves();
+        List<PieceMoves> oppMoves = getOppositeMoves();
+        boolean[][] isAttacked = findAttacking(oppMoves);
+        boolean isCheck = isAttacked[kingHex.getFile()][kingHex.getRank()];
         if (isCheck) {
             // if the current king is in check, we cannot move any other pieces
             // TODO: add support for maintaining all "blocking" moves
@@ -151,16 +145,16 @@ public class ChessGame {
     }
 
     public boolean[][] findAttacking(List<PieceMoves> moves) {
-        var isAttacked = new boolean[FILES][];
-        for (var i = 0; i < isAttacked.length; i++) {
+        boolean[][] isAttacked = new boolean[FILES][];
+        for (int i = 0; i < isAttacked.length; i++) {
             isAttacked[i] = new boolean[RANKS_PER_FILE[i]]; // defaulted to false
         }
 
-        for (var pm : moves) {
-            for (var move : pm.getMoves()) {
+        for (PieceMoves pm : moves) {
+            for (Hexagon move : pm.getMoves()) {
                 // make an exception for the pawn... which does not attack when moving ahead
-                var piece = board.getPiece(pm.getHex());
-                var isMovingAhead = move.getRank() > pm.getHex().getRank();
+                byte piece = board.getPiece(pm.getHex());
+                boolean isMovingAhead = move.getRank() > pm.getHex().getRank();
                 if (isPawn(piece) && isMovingAhead) {
                     continue;
                 }
@@ -171,24 +165,24 @@ public class ChessGame {
     }
 
     public boolean isCheckmate() {
-        var turn = board.turn();
-        var kingHex = board.findKing(turn);
-        var pieceMoves = getPieceMoves(turn);
-        var oppPieceMoves = getPieceMoves(turn.opposite());
-        var kingMoves = pieceMoves.get(pieceMoves.size() - 1);
+        Turn turn = board.turn();
+        Hexagon kingHex = board.findKing(turn);
+        List<PieceMoves> pieceMoves = getPieceMoves(turn);
+        List<PieceMoves> oppPieceMoves = getPieceMoves(turn.opposite());
+        PieceMoves kingMoves = pieceMoves.getLast();
 
         // the LAST element should always be the king moves!
         assert (board.getPiece(kingMoves.getHex()) == (turn.isWhite() ? WHITE_KING : BLACK_KING));
 
         // a king must be checked to be in checkmate
-        var isAttacked = findAttacking(oppPieceMoves);
-        var isChecked = isAttacked[kingHex.getFile()][kingHex.getRank()];
+        boolean[][] isAttacked = findAttacking(oppPieceMoves);
+        boolean isChecked = isAttacked[kingHex.getFile()][kingHex.getRank()];
         if (!isChecked) {
             return false;
         }
 
         // and all hexagons it can move to must be attacked (aka the opponent can move there)
-        for (var move : kingMoves.getMoves()) {
+        for (Hexagon move : kingMoves.getMoves()) {
             if (!isAttacked[move.getFile()][move.getRank()])
                 return false;
         }
@@ -201,8 +195,8 @@ public class ChessGame {
     // finds all pieces moves excluding the king moves, which are handled elsewhere
     public List<PieceMoves> findPieceMoves(Turn turn) {
         List<PieceMoves> moves = new ArrayList<>();
-        for (var hex : Hexagon.ORDERED) {
-            var piece = board.getPiece(hex);
+        for (Hexagon hex : Hexagon.ORDERED) {
+            byte piece = board.getPiece(hex);
             if (piece != EMPTY && isPieceTurn(piece, turn)) {
                 // we check the piece type to find the right piece moves (we have already checked the color)
                 switch (piece) {
@@ -254,39 +248,39 @@ public class ChessGame {
     private static final Direction[] BLACK_TAKE_RIGHT = {Direction.DOWN_RIGHT};
 
     public PieceMoves findPawnMoves(Hexagon hex, Turn turn) {
-        var basePiece = board.getPiece(hex);
+        byte basePiece = board.getPiece(hex);
         List<Hexagon> moves = new ArrayList<>();
 
         // we can always move one rank ahead on the same file
-        var move1 = hex.walk(turn.isWhite() ? WHITE_AHEAD : BLACK_AHEAD);
+        Hexagon move1 = hex.walk(turn.isWhite() ? WHITE_AHEAD : BLACK_AHEAD);
         if (board.inBounds(move1)) {
-            var piece = board.getPiece(move1);
+            byte piece = board.getPiece(move1);
             if (piece == EMPTY) {
                 moves.add(move1);
             }
         }
 
         // we can move a rank ahead of that if we haven't moved yet!
-        var move2 = move1.walk(turn.isWhite() ? WHITE_AHEAD : BLACK_AHEAD);
+        Hexagon move2 = move1.walk(turn.isWhite() ? WHITE_AHEAD : BLACK_AHEAD);
         if (board.inBounds(move2) && !hasPawnMoved(hex, basePiece)) {
-            var piece = board.getPiece(move2);
+            byte piece = board.getPiece(move2);
             if (piece == EMPTY) {
                 moves.add(move2);
             }
         }
 
         // we can also take in adjacent ranks
-        var move3 = hex.walk(turn.isWhite() ? WHITE_TAKE_LEFT : BLACK_TAKE_LEFT);
+        Hexagon move3 = hex.walk(turn.isWhite() ? WHITE_TAKE_LEFT : BLACK_TAKE_LEFT);
         if (board.inBounds(move3)) {
-            var piece = board.getPiece(move3);
+            byte piece = board.getPiece(move3);
             if (piece != EMPTY && areOpposite(basePiece, piece)) {
                 moves.add(move3);
             }
         }
 
-        var move4 = hex.walk(turn.isWhite() ? WHITE_TAKE_RIGHT : BLACK_TAKE_RIGHT);
+        Hexagon move4 = hex.walk(turn.isWhite() ? WHITE_TAKE_RIGHT : BLACK_TAKE_RIGHT);
         if (board.inBounds(move4)) {
-            var piece = board.getPiece(move4);
+            byte piece = board.getPiece(move4);
             if (piece != EMPTY && areOpposite(basePiece, piece)) {
                 moves.add(move4);
             }
@@ -297,11 +291,11 @@ public class ChessGame {
 
     // travel along the offsets - aka keep on going until we can't move in that direction
     public List<Hexagon> findMovesByTraveling(Hexagon hex, Direction[][] directions) {
-        var basePiece = board.getPiece(hex);
+        byte basePiece = board.getPiece(hex);
         List<Hexagon> moves = new ArrayList<>();
 
-        for (var direction : directions) {
-            var move = hex;
+        for (Direction[] direction : directions) {
+            Hexagon move = hex;
 
             while (true) {
                 move = move.walk(direction);
@@ -310,7 +304,7 @@ public class ChessGame {
                     break;
                 }
 
-                var piece = board.getPiece(move);
+                byte piece = board.getPiece(move);
                 if (piece == EMPTY) {
                     // we can move here and keep going!
                     moves.add(move);
@@ -332,17 +326,17 @@ public class ChessGame {
     }
 
     public List<Hexagon> findOffsetMoves(Hexagon hex, Direction[][] directions, Function<Hexagon, Boolean> canMoveTo) {
-        var basePiece = board.getPiece(hex);
+        byte basePiece = board.getPiece(hex);
         List<Hexagon> moves = new ArrayList<>();
 
-        for (var direction : directions) {
-            var move = hex.walk(direction);
+        for (Direction[] direction : directions) {
+            Hexagon move = hex.walk(direction);
             if (!board.inBounds(move)) {
                 continue;
             }
 
-            var piece = board.getPiece(move);
-            var canMoveHex = piece == EMPTY || areOpposite(basePiece, piece); // short-circuiting prevents us from checking if an empty piece is opposite
+            byte piece = board.getPiece(move);
+            boolean canMoveHex = piece == EMPTY || areOpposite(basePiece, piece); // short-circuiting prevents us from checking if an empty piece is opposite
 
             if (canMoveHex && canMoveTo.apply(move)) {
                 moves.add(move);
